# quickchart-mcp-server

./: .gitignore  README.md  env.example  pyproject.toml
extras/: simple_server.py
src/: server.py
